# agentic-new

./: .gitattributes  .gitignore  AWAKE-GOD.bat  AWAKE-JARVIS.sh  CLAUDE.md  GEMINI.md  GOD-HANDOFF-PROMPT.md  GeneratedDashboard.tsx  HANDOFF-2026-04-23-AGENT-FRAMEWORK.md  HANDOFF-2026-04-23-HONESTY-DNA.md  HANDOFF-2026-04-24-BROWSER-AGENT.md  HANDOFF-AUTONOMOUS-2026-04-23.md  HANDOFF-PROMPT-10.md  HANDOFF-PROMPT-11.md  HANDOFF-PROMPT-12.md  HANDOFF-PROMPT-13.md  HANDOFF-PROMPT-14.md  HANDOFF-PROMPT-15.md  HANDOFF-PROMPT-SHORT.md  HANDOFF-PROMPT.md  INSTALL-WINDOWS-SCRATCH.md  INSTALLATION.md  Oracle-Ecosystem-Summary.md  README.md  REAL-LEARNING-UPGRADE.md  RUN-AGENT.md  S-Updated.md  S.txt  SELF-FIX-PROMPT.md  WINDOWS-SETUP-GUIDE.md  Windsurf-Workflow-Optimization.md  autonomous-verify.sh  brain-bridge.cmd  brain-bridge.sh  finish-day.ps1  gemini-yolo.cmd  gemini-yolo.ps1  howtoinstall.txt  jarvis_showcase.py  latest_design_link.txt  (+25 more)
.gemini/: launch-agent.sh  settings.json  settings.json.bak
Archive/maw-js/src/wasm/examples/hello-rust-full/: Cargo.toml  README.md
Archive/maw-js/src/wasm/examples/hello-rust-full/src/: lib.rs
agent-framework/: 01-SOUL-TEMPLATE.md  02-CONSTITUTION.md  03-ARCHITECTURE.md  04-LESSONS-SYSTEM.md  05-PROMPT-ENGINEERING.md  06-QUICK-START.md  07-INTEGRATION.md
agentic-browser/: README.md  WORKFLOW.md  browser_tool.py  demo_visible.py  god_agent.py
agents/: CONSTITUTION.md  lesson_logger.py  prompt_builder.py
arra-oracle-skills-cli/: CHANGELOG.md  README.md  package.json
god-upgrades/: HANDOFF.md  README.md
lessons/: INDEX.md
(+732 files in other folders)
